--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <main id="page-container">
             <div id="login-page" class="page active">
                 <div class="page-content centered-content">
-                    <img src="https://uploads.onecompiler.io/42q5e2pr5/43m4t5ddk/1000130216.png" alt="App Logo" class="app-icon-large">
+                    <img src="assets/applogo.png" alt="App Logo" class="app-icon-large">
                     <h2>Welcome to StreetR!</h2>
                     <p>Your Favorite Foods, Snacks & Juices Delivered with a Smile!</p>
                     <input type="email" id="login-email" placeholder="Enter your email" autocomplete="email">
@@ -118,7 +118,7 @@
                     <h3>Your Cart</h3>
                     <div id="cart-items-container"></div>
                     <div id="cart-empty-view" class="empty-state hidden">
-                        <img src="https://uploads.onecompiler.io/42q5e2pr5/43nvveyp4/1000133809.png" alt="Empty Cart Illustration">
+                        <img src="assets/empty.png" alt="Empty Cart Illustration">
                         <p>Your cart is empty. Let's fill it up!</p>
                     </div>
                     <div id="cart-summary" class="hidden">
@@ -230,7 +230,7 @@
                     <div id="search-results-shops" class="search-results-content"></div>
                 </div>
                 <div id="search-empty-state" class="empty-state hidden">
-                    <img src="https://uploads.onecompiler.io/42q5e2pr5/43nvveyp4/1000133143.png" alt="No results found">
+                    <img src="assets/results.png" alt="No results found">
                     <p>No results found for '<span id="search-query-display"></span>'. Try another keyword.</p>
                 </div>
                 <button id="qr-scanner-button" class="qr-scanner-fab"><i class="fa-solid fa-qrcode"></i></button>
